# Circuits

./: .gitignore  README.md  environment.yml  notes.md  pyproject.toml  results.md
configs/benchmark/: symbolic_kv_base.json
configs/train/: symbolic_kv_formation.json  symbolic_kv_generalization.json  symbolic_kv_generalization_decay.json  symbolic_kv_tiny.json
docs/: _config.yml  analysis_cli_guide.md  checkpoint_analysis_plan.md  index.md  shared_feature_dynamics_plan.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/assets/: main.scss
docs/assets/css/: style.css
scripts/: build_public_paper_figures.py  cross_seed_adam_pipeline.py
src/circuit/: cli.py  config.py  eval.py  reference.py  runtime.py  train.py
src/circuit/analysis/: actual_batch_route_attribution.py  analysis_report.py  answer_margin_branch_decomposition.py  answer_margin_delta_decomposition.py  answer_scalar_residual_diagnosis.py  bilinear_qk_match_separation.py  bilinear_qk_rank_actual_batch_attribution.py  birth_window_compare.py  (+23 more)
src/circut/: cli.py  config.py  eval.py  io.py  reference.py  runtime.py  train.py  vocab.py
tests/: conftest.py  helpers.py  test_answer_margin_branch_decomposition.py  test_answer_margin_delta_decomposition.py  test_answer_scalar_residual_diagnosis.py  test_optimizer_update_trace.py  test_output_component_causal_validation.py  test_output_mediated_causal_decomposition.py  test_output_route_closure.py  test_pipeline.py  test_residual_state_rescue.py  test_route_to_margin_closure.py  test_route_to_scalar_closure.py  test_symbolic_kv.py
(+16 files in other folders)
